--- a/DropdownPickerView/DropdownPickerView/Base.lproj/Main.storyboard
+++ b/DropdownPickerView/DropdownPickerView/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DropdownPickerView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,42 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GDe-Ym-QFJ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="66"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="34" translatesAutoresizingMaskIntoConstraints="NO" id="kHH-Xn-c2S" customClass="DropdownPickerView" customModule="DropdownPickerView" customModuleProvider="target">
+                                        <rect key="frame" x="16" y="16" width="343" height="34"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="placeHolder" value="Hello"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="defaultText" value="Select Country"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.92941176469999998" green="0.1058823529" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="kHH-Xn-c2S" secondAttribute="bottom" constant="16" id="12Q-LP-hbV"/>
+                                    <constraint firstAttribute="trailing" secondItem="kHH-Xn-c2S" secondAttribute="trailing" constant="16" id="CBa-Vv-Aqu"/>
+                                    <constraint firstItem="kHH-Xn-c2S" firstAttribute="top" secondItem="GDe-Ym-QFJ" secondAttribute="top" constant="16" id="rXa-Xx-YWJ"/>
+                                    <constraint firstItem="kHH-Xn-c2S" firstAttribute="leading" secondItem="GDe-Ym-QFJ" secondAttribute="leading" constant="16" id="tNB-qQ-2Qb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GDe-Ym-QFJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="L5l-dO-6gF"/>
+                            <constraint firstAttribute="trailing" secondItem="GDe-Ym-QFJ" secondAttribute="trailing" id="rt9-Wj-iVY"/>
+                            <constraint firstItem="GDe-Ym-QFJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="saW-Ds-zgi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="pickerView" destination="kHH-Xn-c2S" id="vVi-aS-Cs3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
